Fases corregidas hasta la 12