@@ -1,11 +1,4 @@
-package com.teccell.backend.service; 
-import java.time.LocalDate;
-import java.time.temporal.ChronoUnit;
-import java.util.List;
-import java.util.stream.Collectors;
-
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
+package com.teccell.backend.service;
 
 import com.teccell.backend.dto.response.AlertaOrdenResponse;
 import com.teccell.backend.dto.response.ReincidenciaEquipoResponse;
@@ -14,9 +7,16 @@ import com.teccell.backend.entity.OrdenReparacion;
 import com.teccell.backend.enums.EstadoOrden;
 import com.teccell.backend.enums.NivelReincidenciaEquipo;
 import com.teccell.backend.enums.SituacionEntrega;
+import com.teccell.backend.exception.ResourceNotFoundException;
 import com.teccell.backend.repository.EquipoRepository;
 import com.teccell.backend.repository.OrdenReparacionRepository;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDate;
+import java.time.temporal.ChronoUnit;
+import java.util.Comparator;
+import java.util.List;
 
 @Service
 @Transactional(readOnly = true)
@@ -25,55 +25,61 @@ public class AlertaOrdenService {
     private final OrdenReparacionRepository ordenRepo;
     private final EquipoRepository equipoRepo;
 
-    public AlertaOrdenService(OrdenReparacionRepository ordenRepo, EquipoRepository equipoRepo) {
+    public AlertaOrdenService(
+            OrdenReparacionRepository ordenRepo,
+            EquipoRepository equipoRepo
+    ) {
         this.ordenRepo = ordenRepo;
         this.equipoRepo = equipoRepo;
     }
 
-    
     public List<AlertaOrdenResponse> getOrdenesVencidas() {
         LocalDate hoy = LocalDate.now();
-        
-        return ordenRepo.findAll().stream()
-                .filter(o -> o.getEstado() != EstadoOrden.ENTREGADO && o.getEstado() != EstadoOrden.CANCELADO)
-                .filter(o -> o.getFechaEstimadaEntrega().isBefore(hoy))
-                .map(o -> mapearAlertaResponse(o, hoy, SituacionEntrega.VENCIDA))
-                .collect(Collectors.toList());
-    }
 
+        return ordenRepo.findAll()
+                .stream()
+                .filter(this::esOrdenAbierta)
+                .filter(orden -> orden.getFechaEstimadaEntrega() != null)
+                .filter(orden -> orden.getFechaEstimadaEntrega().isBefore(hoy))
+                .sorted(Comparator.comparing(OrdenReparacion::getFechaEstimadaEntrega))
+                .map(orden -> mapearAlertaResponse(orden, hoy, SituacionEntrega.VENCIDA))
+                .toList();
+    }
 
     public List<AlertaOrdenResponse> getProximasEntregas() {
         LocalDate hoy = LocalDate.now();
+        LocalDate limiteProximas = hoy.plusDays(3);
 
-        return ordenRepo.findAll().stream()
-                .filter(o -> o.getEstado() != EstadoOrden.ENTREGADO && o.getEstado() != EstadoOrden.CANCELADO)
-                .filter(o -> !o.getFechaEstimadaEntrega().isBefore(hoy))
-                .map(o -> {
-                    long diasRestantes = ChronoUnit.DAYS.between(hoy, o.getFechaEstimadaEntrega());
-                    SituacionEntrega situacion;
+        return ordenRepo.findAll()
+                .stream()
+                .filter(this::esOrdenAbierta)
+                .filter(orden -> orden.getFechaEstimadaEntrega() != null)
+                .filter(orden -> !orden.getFechaEstimadaEntrega().isBefore(hoy))
+                .filter(orden -> !orden.getFechaEstimadaEntrega().isAfter(limiteProximas))
+                .sorted(Comparator.comparing(OrdenReparacion::getFechaEstimadaEntrega))
+                .map(orden -> {
+                    long diasRestantes = ChronoUnit.DAYS.between(hoy, orden.getFechaEstimadaEntrega());
 
-                    if (diasRestantes == 0) {
-                        situacion = SituacionEntrega.VENCE_HOY;
-                    } else if (diasRestantes >= 1 && diasRestantes <= 3) {
-                        situacion = SituacionEntrega.PROXIMA_A_VENCER;
-                    } else {
-                        situacion = SituacionEntrega.DENTRO_DEL_PLAZO;
-                    }
+                    SituacionEntrega situacion = diasRestantes == 0
+                            ? SituacionEntrega.VENCE_HOY
+                            : SituacionEntrega.PROXIMA_A_VENCER;
 
-                  
-                    return mapearAlertaResponse(o, hoy, situacion);
+                    return mapearAlertaResponse(orden, hoy, situacion);
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    // 3. Calcular reincidencia de un equipo por su ID
-public ReincidenciaEquipoResponse calcularReincidencia(Long equipoId) {
+    public ReincidenciaEquipoResponse calcularReincidencia(Long equipoId) {
         Equipo equipo = equipoRepo.findById(equipoId)
-                .orElseThrow(() -> new RuntimeException("No se encontró el equipo con ID: " + equipoId));
+                .orElseThrow(() -> new ResourceNotFoundException("No se encontró el equipo con ID: " + equipoId));
 
-        long reparacionesAnteriores = ordenRepo.countByEquipoId(equipoId);
-        
+        long reparacionesAnteriores = ordenRepo.findByEquipoId(equipoId)
+                .stream()
+                .filter(orden -> orden.getEstado() == EstadoOrden.ENTREGADO)
+                .count();
+
         NivelReincidenciaEquipo nivel;
+
         if (reparacionesAnteriores == 0) {
             nivel = NivelReincidenciaEquipo.SIN_ANTECEDENTES;
         } else if (reparacionesAnteriores == 1) {
@@ -93,17 +99,31 @@ public ReincidenciaEquipoResponse calcularReincidencia(Long equipoId) {
         );
     }
 
-    private AlertaOrdenResponse mapearAlertaResponse(OrdenReparacion o, LocalDate hoy, SituacionEntrega situacion) {
-        long diasDiferencia = ChronoUnit.DAYS.between(hoy, o.getFechaEstimadaEntrega());
-        String marcaModelo = o.getEquipo().getMarca() + " " + o.getEquipo().getModelo();
-        String clienteNombre = o.getEquipo().getCliente().getNombres() + " " + o.getEquipo().getCliente().getApellidos();
+    private boolean esOrdenAbierta(OrdenReparacion orden) {
+        return Boolean.TRUE.equals(orden.getActivo())
+                && orden.getEstado() != EstadoOrden.ENTREGADO
+                && orden.getEstado() != EstadoOrden.CANCELADO;
+    }
+
+    private AlertaOrdenResponse mapearAlertaResponse(
+            OrdenReparacion orden,
+            LocalDate hoy,
+            SituacionEntrega situacion
+    ) {
+        long diasDiferencia = ChronoUnit.DAYS.between(hoy, orden.getFechaEstimadaEntrega());
+
+        String marcaModelo = orden.getEquipo().getMarca() + " " + orden.getEquipo().getModelo();
+
+        String clienteNombre = orden.getEquipo().getCliente().getNombres()
+                + " "
+                + orden.getEquipo().getCliente().getApellidos();
 
         return new AlertaOrdenResponse(
-                o.getId(),
-                o.getTicket(),
+                orden.getId(),
+                orden.getTicket(),
                 marcaModelo,
                 clienteNombre,
-                o.getFechaEstimadaEntrega(),
+                orden.getFechaEstimadaEntrega(),
                 diasDiferencia,
                 situacion
         );
